# tailored_mpc

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: dynamic.cfg  long.cfg
debug/: exit_flags.csv  exit_flags_fss.csv  mz_fss.csv  solCommands.csv  solStates.csv  solve_time.txt  solve_time_fss.txt  steering_fss.csv
include/: forces.hh  longitudinal.hh  mpc.hh  optimizer.hh
include/structures/: params.hh
include/utils/: kdtree.h  lapcount.hh  optimizer.hh  params.hh  vis_tools.hh
launch/: acceleration.launch  autoX.launch  skidpad.launch  tailored_mpc.launch  trackdrive.launch
params/: dyn_accel.yaml  dyn_autocross.yaml  dyn_autocross_lowfy.yaml  dyn_autocross_spatial.yaml  dyn_autocross_testing.yaml  dyn_autox.yaml  dyn_autox_safe.yaml  dyn_autox_tv.yaml  dyn_skidpad.yaml  dyn_tailored_mpc.yaml  dyn_trackdrive.yaml  dyn_trackdrive_follow.yaml  dyn_trackdrive_lowfy.yaml  dyn_trackdrive_spatial.yaml  dyn_trackdrive_tv.yaml  dyn_tro.yaml  tailored_mpc.yaml
solver/: FORCES_problem.m  LookUpTableDV.mat  fx_table.m  generate_solver.asv  generate_solver.m  generate_solver_cartesian.m  plots.m  rtwTargetInfo.m  stdout_temp  try_solver.asv  try_solver.m
solver/codeGen/: TailoredSolver.m  TailoredSolver.mexa64  TailoredSolverBuildable.m  TailoredSolver_adtool2forces.c  TailoredSolver_adtool2forces.h  TailoredSolver_casadi.c  TailoredSolver_casadi.h  TailoredSolver_py.py
solver/codeGen/TailoredSolver/: TailoredSolver.m
solver/codeGen/TailoredSolver/include/: TailoredSolver.h  TailoredSolver_memory.h
solver/codeGen/TailoredSolver/interface/: COPYING.m  TailoredSolver.m  TailoredSolverBuildable.m  TailoredSolver_build.py  TailoredSolver_coderFunction.m  TailoredSolver_coderFunctioncompact.m  TailoredSolver_createCoderMatlabFunction.m  TailoredSolver_dynamics_mex.c  TailoredSolver_get_mem_size.c  TailoredSolver_inequalities_mex.c  TailoredSolver_lib.mdl  TailoredSolver_mex.c  TailoredSolver_objective_mex.c  TailoredSolver_py.py  TailoredSolver_simulinkBlock.c  TailoredSolver_simulinkBlockcompact.c  TailoredSolvercompact_lib.mdl  definitions.py
src/: longitudinal.cpp  main.cpp  mpc.cpp  optimizer.cpp  pid.cpp
src/structures/: params.cpp
src/utils/: optimizer.cpp  params.cpp  vis_tools.cpp
